--- a/square1.html
+++ b/square1.html
@@ -1,39 +1,48 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Square | Квадрат</title>
-    <link rel="stylesheet" href="css/style5.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Square | Квадрат</title>
+  <link rel="stylesheet" href="css/style5.css">
 </head>
-<body>
-    <div class="squares">
-        <div class="yellow"><p>A</p></div>
-        <div class="blue"><p>B</p></div>
-        <div class="yellow"><p>C</p></div>
-        <div class="blue"><p>D</p></div>
-        <div class="yellow"><p>E</p></div>
-        <div class="blue"><p>F</p></div>
-        <div class="yellow"><p>G</p></div>
-        <div class="blue"><p>H</p></div>
-        <div class="yellow"><p>I</p></div>
-        <div class="blue"><p>J</p></div>
-        <div class="yellow"><p>K</p></div>
-        <div class="blue"><p>L</p></div>
-        <div class="yellow"><p>M</p></div>
-        <div class="blue"><p>N</p></div>
-        <div class="yellow"><p>O</p></div>
-        <div class="blue"><p>P</p></div>
-        <div class="yellow"><p>R</p></div>
-        <div class="blue"><p>S</p></div>
-        <div class="yellow"><p>T</p></div>
-        <div class="blue"><p>U</p></div>
-        <div class="yellow"><p>V</p></div>
-        <div class="blue"><p>W</p></div>
-        <div class="yellow"><p>X</p></div>
-        <div class="blue"><p>Y</p></div>
-        <div class="yellow"><p>Z</p></div>
-      </div> 
-</body>
+ <body>
+  <h1 hidden>Квадрат</h1>
+  <ul>
+    <li class="yellow">A</li>
+    <li class="blue">B</li>
+    <li class="yellow">C</li>
+    <li class="blue">D</li>
+    <li class="yellow">E</li>
+  </ul>
+  <ul>
+    <li class="blue">F</li>
+    <li class="yellow">G</li>
+    <li class="blue">H</li>
+    <li class="yellow">I</li>
+    <li class="blue">J</li>
+  </ul>
+  <ul>
+    <li class="yellow">K</li>
+    <li class="blue">L</li>
+    <li class="yellow">M</li>
+    <li class="blue">N</li>
+    <li class="yellow">O</li>
+  </ul>
+  <ul>
+    <li class="blue">P</li>
+    <li class="yellow">Q</li>
+    <li class="blue">R</li>
+    <li class="yellow">S</li>
+    <li class="blue">T</li>
+  </ul>
+  <ul>
+    <li class="yellow">U</li>
+    <li class="blue">V</li>
+    <li class="yellow">W</li>
+    <li class="blue">X</li>
+    <li class="yellow">Y</li>
+  </ul>
+ </body>
 </html>
